--- a/src/Localiza.Teste.Application/Localiza.Teste.Application.csproj
+++ b/src/Localiza.Teste.Application/Localiza.Teste.Application.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="10.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Localiza.Teste.Domain\Localiza.Teste.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
