--- a/src/Localiza.Teste.Api/Localiza.Teste.Api.csproj
+++ b/src/Localiza.Teste.Api/Localiza.Teste.Api.csproj
@@ -4,5 +4,14 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Localiza.Teste.Application\Localiza.Teste.Application.csproj" />
+    <ProjectReference Include="..\Localiza.Teste.Domain\Localiza.Teste.Domain.csproj" />
+  </ItemGroup>
+
 
 </Project>
